fix: contact me link working on mobile

--- a/src/frontend/style/global.css
+++ b/src/frontend/style/global.css
@@ -51,3 +51,7 @@ footer{
     font-size: 20px;
     color: rgb(0, 0, 0);
 }
+
+#contact_me{
+    user-select: none;
+}
